--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -7,7 +7,7 @@ MYSQL_ROOT_PASSWORD=password
 
 DOMAIN_NAME=btaha.42.fr
 WP_TITLE=Inception
-WP_ADMIN_USER=auser
+WP_ADMIN_USER=btaha
 WP_ADMIN_PASSWORD=chihaja
 WP_ADMIN_EMAIL=taha88755@gmail.com
 WP_USER=someuser
