--- a/inception/Makefile
+++ b/inception/Makefile
@@ -13,8 +13,8 @@ stop:
 status:
 	docker-compose -f ./srcs/docker-compose.yml ps
 volumes:
-	mkdir -p /home/btaha/data/DataBase
-	mkdir -p /home/btaha/data/WordPress
+	sudo mkdir -p /home/btaha/data/DataBase
+	sudo mkdir -p /home/btaha/data/WordPress
 clear_volumes:
-	rm -rf /home/btaha/data/DataBase/*
-	rm -rf /home/btaha/data/WordPress/*
+	sudo rm -rf /home/btaha/data/DataBase/*
+	sudo rm -rf /home/btaha/data/WordPress/*
